# midas-journal-682

IJTestingFramework/Document/LaTeX/: CDashDisplay.eps  InsightJournal.bib  Makefile  TestingFramework.tex  itkFlowDiagram.eps  itkNewFlowDiagram.eps
IJTestingFramework/Source/: CMakeLists.txt  CTestConfig.cmake  itktfRegressionSupport.h.in  itktfShiftScaleInPlaceImageFilterTest.cxx
IJTestingFramework/Source/Utilities/FileUtilities/: PathName.h
IJTestingFramework/Source/Utilities/TestingFramework/: CMakeLists.txt  tfDiff.cpp  tfMeasurement.cpp  tfMeasurement.h  tfMeasurementVisitor.h  tfRegressionTest.cpp  tfRegressionTest.h
IJTestingFramework/Source/Utilities/TestingFramework/tests/: CMakeLists.txt  tfRegressionTestTest2.cxx
IJTestingFramework/Source/Utilities/itktf/: CMakeLists.txt  itktfCompareVisitor.cxx  itktfCompareVisitor.h  itktfDifferenceVisitor.cxx  itktfDifferenceVisitor.h  itktfFilterWatcher.h  itktfRegression.cxx  itktfRegression.h
IJTestingFramework/Source/Utilities/itktf/Testing/: CMakeLists.txt  itktfMeasurementFileImageInsightTest4.cxx
IJTestingFramework/Source/XML/: itktfShiftScaleInPlaceImageFilterTest.xml
