PROJECT( TESTINGFRAMEWORK )

SET( TESTINGFRAMEWORK_LIB_SRC
  tfBase64.cpp
  tfRegressionTest.cpp
  tfMeasurement.cpp
  tfMeasurementVisitor.cpp
  tfDiff.cpp
  )

FIND_PACKAGE ( EXPAT REQUIRED )

INCLUDE_DIRECTORIES("${EXPAT_INCLUDE_DIRS}" "${TESTINGFRAMEWORK_BINARY_DIR}" )

CONFIGURE_FILE("${TESTINGFRAMEWORK_SOURCE_DIR}/TestFrameworkConfigure.h.in"
  "${TESTINGFRAMEWORK_BINARY_DIR}/TestFrameworkConfigure.h" IMEDIATE) 

ADD_SUBDIRECTORY ( tests ) 

ADD_LIBRARY( testingframework ${TESTINGFRAMEWORK_LIB_SRC} )
TARGET_LINK_LIBRARIES( testingframework ${EXPAT_LIBRARIES} fileutil )
